Google webform added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,94 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<form action="https://docs.google.com/forms/d/1BN-AGNjTnHKI9qQ4T_mfAyMDbPTQ3AtJ6LuqFTWFBl4/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
+<div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1487377941"><div class="ss-q-title">Full name
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.1487377941" value="" class="ss-q-short" id="entry_1487377941" dir="auto" aria-label="Full name  " title="">
+<div class="error-message" id="177226480_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_629189183"><div class="ss-q-title">Nationality
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.629189183" value="" class="ss-q-short" id="entry_629189183" dir="auto" aria-label="Nationality  " title="">
+<div class="error-message" id="355448973_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-date"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1392117904"><div class="ss-q-title">Date of birth (Hijri)
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto">In hijri</div></label>
+<input type="date" name="entry.1392117904" value="" class="ss-q-date" dir="auto" id="entry_1392117904" aria-label="Date of birth (Hijri) In hijri ">
+<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-date"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_611664070"><div class="ss-q-title">Date of birth (Gregorian)
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto">In gregorian</div></label>
+<input type="date" name="entry.611664070" value="" class="ss-q-date" dir="auto" id="entry_611664070" aria-label="Date of birth (Gregorian) In gregorian ">
+<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-date"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1144235925"><div class="ss-q-title">Joining date
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="date" name="entry.1144235925" value="" class="ss-q-date" dir="auto" id="entry_1144235925" aria-label="Joining date  ">
+<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_270591529"><div class="ss-q-title">Qualification
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.270591529" value="" class="ss-q-short" id="entry_270591529" dir="auto" aria-label="Qualification  " title="">
+<div class="error-message" id="1857120100_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1918368229"><div class="ss-q-title">Telephone number
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.1918368229" value="" class="ss-q-short" id="entry_1918368229" dir="auto" aria-label="Telephone number  " title="">
+<div class="error-message" id="1561216984_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_780221626"><div class="ss-q-title">Home number
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.780221626" value="" class="ss-q-short" id="entry_780221626" dir="auto" aria-label="Home number  " title="">
+<div class="error-message" id="763872754_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1959484836"><div class="ss-q-title">Office number
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.1959484836" value="" class="ss-q-short" id="entry_1959484836" dir="auto" aria-label="Office number  " title="">
+<div class="error-message" id="1009413801_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1601573619"><div class="ss-q-title">Email address
+</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+<input type="text" name="entry.1601573619" value="" class="ss-q-short" id="entry_1601573619" dir="auto" aria-label="Email address  Invalid email address" pattern=".*(?:[a-z0-9!#$%&amp;&#39;*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&amp;&#39;*+/=?^_`{|}~-]+)*|&quot;(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*&quot;)@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\]).*" title="Invalid email address">
+<div class="error-message" id="577963927_errorMessage">Invalid email address</div>
+<div class="required-message">This is a required question</div>
+</div></div></div>
+<input type="hidden" name="draftResponse" value="[,,&quot;-7353205315391919385&quot;]
+">
+<input type="hidden" name="pageHistory" value="0">
+
+<input type="hidden" name="fvv" value="0">
+
+
+<input type="hidden" name="fbzx" value="-7353205315391919385">
+
+<div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
+<input type="submit" name="continue" value="Continue &raquo;" id="ss-submit" class="jfk-button jfk-button-standard "></td>
+<td id="progress-container"><div id="progress-bar" class="jfk-progressBar-nonBlocking progress-bar-horizontal goog-inline-block"></div>
+<div id="progress-label" class="progress-label">50% completed</div></td></tr></tbody></table></div></ol></form>
 </body>
 </html>
