Google form iframe added.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<form action="https://docs.google.com/forms/d/1BN-AGNjTnHKI9qQ4T_mfAyMDbPTQ3AtJ6LuqFTWFBl4/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
+<iframe src="https://docs.google.com/forms/d/1BN-AGNjTnHKI9qQ4T_mfAyMDbPTQ3AtJ6LuqFTWFBl4/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1487377941"><div class="ss-q-title">Full name
